(stabilization fixes 03-10-2025)